tests/ui_fail/overlapping_2.stderr
error[E0119]: conflicting implementations of trait `Kita0<GroupA, u32>`
  --> tests/ui_fail/overlapping_2.rs:21:5
   |
18 |     impl<T: Dispatch1<Group = GroupA> + Dispatch2<Group = GroupA>> Kita<u32> for T {
   |     ------------------------------------------------------------------------------ first implementation here
...
21 |     impl<T: Dispatch1<Group = GroupA> + Dispatch2<Group = GroupA>> Kita<u32> for T {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation
